# smartbot_irl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: .gitignore  CNAME  Makefile  requirements.txt
docs.bak/source/: conf.py  getting_started.md
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/_static/gifs/: base.rst  win_venv_install.webm  win_venv_req_install.webm
docs/source/_static/videos/: 10fps_demo.webm  Peek 2025-11-15 07-22.webm  giffer.sh  gitbash_install.webm  long_10fps.webm  win_clone_repo.webm  win_make_venv.webm  win_py_install.webm  win_venv_smartbot_install.webm  win_vs_install.webm  win_vsc_extensions_open.webm
docs/source/_templates/: index.html
docs/source/_templates/autosummary/: module.rst
docs/source/api/: index.rst  modules.rst  smartbot_irl.data.converters.rst  smartbot_irl.data.data.rst  smartbot_irl.data.rst  smartbot_irl.data.type_maps.rst  smartbot_irl.drawing.drawer_thread.rst  smartbot_irl.drawing.rst  smartbot_irl.robot.rst  smartbot_irl.robot.smartbot.rst  smartbot_irl.robot.smartbot_base.rst  smartbot_irl.robot.smartbot_real.rst  smartbot_irl.robot.smartbot_ros.rst  smartbot_irl.robot.smartbot_sim.rst  smartbot_irl.robot.topic_loader.rst  smartbot_irl.rst  smartbot_irl.sim2d.engine.rst  smartbot_irl.sim2d.rst  smartbot_irl.sim2d.sensors.rst
docs/source/api/none/: smartbot_irl.Command.rst  smartbot_irl.SensorData.rst  (+12 more)
docs/source/feedback/: index.rst
docs/source/glossary/: index.rst
docs/source/troubleshooting/: index.rst
docs/source/tutorials/: activating_robot.md  index.rst  run_robot.md  teleop_example.md  the_shell.md  troubleshooting.md
docs/source/user_manual/: activating_robot.md  connect_network.md  index.rst  installing_deps.md  intro.md  run_robot.md  setup_venv.md  setup_workspace.md  smartbot_basics.md  troubleshooting.md
smartbot_irl/: __init__.py
smartbot_irl/data/: __init__.py  _converters.py  _data.py  _data_logging.py  _type_maps.py  converters.py  data.py  data_logging.py  frame.py  type_maps.py
smartbot_irl/drawing/: __init__.py  _drawer_thread.py  _plotting.py  drawer_thread.py  plotting.py
smartbot_irl/real/sensing/: __init__.py  sensors.py
smartbot_irl/robot/: __init__.py  smartbot.py  smartbot_base.py  smartbot_real.py  smartbot_ros.py  smartbot_sim.py  smartbot_sim2d.py  topic_loader.py
smartbot_irl/sim2d/: __init__.py  _components.py  _engine.py  _simulator.py  _systems.py  _utils.py  engine.py  sensors.py  utils.py
smartbot_irl/utils/: __init__.py  data_saving.py  smart_logging.py
